// version of protocol buffer used
syntax = "proto3";

// package name for the buffer will be used later
package raft;

service RaftParticipant {
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse);
}

message AppendEntriesRequest {
  uint32 term = 1;
  uint32 leader_id = 2;
  uint32 prev_log_index = 3;
  uint32 prev_log_term = 4;
  repeated string entries = 5;
  uint32 leader_commit = 6;
}

message AppendEntriesResponse {
  uint32 term = 1;
  bool success = 2;
}
